--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 	
 		<link href="./_app/immutable/assets/0.DfxhmisX.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DvQcRx63.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D_qZ8GaD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/UBZobI2O.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B-QCN5lY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DbHftq0b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C3hMSKSq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Drl9Wala.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BLpdHrnV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CI88p4ua.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B4TdJ9je.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DAIWAEIk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5esD2gV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/awlxF5AF.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.C8WKcjwi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C_Rw9l4X.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CKwltNsP.js"><!--[--><meta name="description" content="Description TK"> <meta name="author" content="The Pudding"> <meta name="news_keywords" content=""> <meta property="og:title" content="Bay Area Super Commuters"> <meta property="og:site_name" content="The Pudding"> <meta property="og:url" content="https://pudding.cool"> <meta property="og:description" content="Description TK"> <meta property="og:type" content="article"> <meta property="og:locale" content="en_US"> <meta property="og:image" content="https://pudding.cool/assets/social-facebook.jpg"> <meta property="og:image:type" content="image/jpeg"> <meta property="og:image:width" content="1200"> <meta property="og:image:height" content="628"> <meta name="twitter:card" content="summary_large_image"> <meta name="twitter:site" content="https://pudding.cool"> <meta name="twitter:creator" content="@puddingviz"> <meta name="twitter:title" content="Bay Area Super Commuters"> <meta name="twitter:description" content="Description TK"> <meta name="twitter:image:src" content="https://pudding.cool/assets/social-twitter.jpg"> <meta name="robots" content="max-image-preview:large"> <link rel="canonical" href="https://pudding.cool/"> <!--[--><link rel="preload" href="https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Regular.woff2" as="font" type="font/woff2" crossorigin=""><link rel="preload" href="https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Bold.woff2" as="font" type="font/woff2" crossorigin=""><link rel="preload" href="https://pudding.cool/assets/fonts/atlas/AtlasGrotesk-Regular-Web.woff2" as="font" type="font/woff2" crossorigin=""><link rel="preload" href="https://pudding.cool/assets/fonts/atlas/AtlasGrotesk-Bold-Web.woff2" as="font" type="font/woff2" crossorigin=""><!--]--><!--]--><title>Bay Area Super Commuters</title>
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DqdFnCk8.js"><!--[--><meta name="description" content="This is the personal website of Andres Larios, a data and graphics journalist. He likes to play with how information is shared through different visual formats in an effort to make it more accessible to a wider audience."> <meta name="author" content="The Pudding"> <meta name="news_keywords" content="news, information, data, visualization, journalism, graphics, Andres Jimenez Larios, personal website, data journalism, visual formats, accessibility, audience engagement, storytelling, design, communication, media, research, analysis, insights, trends"> <meta property="og:title" content="Blank, To-Scale"> <meta property="og:site_name" content="Blank, To-Scale"> <meta property="og:url" content="https://alariosjx.github.io/to-scale/"> <meta property="og:description" content="This is the personal website of Andres Larios, a data and graphics journalist. He likes to play with how information is shared through different visual formats in an effort to make it more accessible to a wider audience."> <meta property="og:type" content="website"> <meta property="og:locale" content="en_US"> <meta property="og:image" content="https://alariosjx.github.io/to-scale//assets/social-facebook.jpg"> <meta property="og:image:type" content="image/jpeg"> <meta property="og:image:width" content="1200"> <meta property="og:image:height" content="628"> <meta name="twitter:card" content="summary_large_image"> <meta name="twitter:site" content="https://pudding.cool"> <meta name="twitter:creator" content="@puddingviz"> <meta name="twitter:title" content="Blank, To-Scale"> <meta name="twitter:description" content="This is the personal website of Andres Larios, a data and graphics journalist. He likes to play with how information is shared through different visual formats in an effort to make it more accessible to a wider audience."> <meta name="twitter:image:src" content="https://alariosjx.github.io/to-scale//assets/social-twitter.jpg"> <meta name="robots" content="max-image-preview:large"> <link rel="canonical" href="https://alariosjx.github.io/to-scale//"> <!--[--><link rel="preload" href="https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Regular.woff2" as="font" type="font/woff2" crossorigin=""><link rel="preload" href="https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Bold.woff2" as="font" type="font/woff2" crossorigin=""><link rel="preload" href="https://pudding.cool/assets/fonts/atlas/AtlasGrotesk-Regular-Web.woff2" as="font" type="font/woff2" crossorigin=""><link rel="preload" href="https://pudding.cool/assets/fonts/atlas/AtlasGrotesk-Bold-Web.woff2" as="font" type="font/woff2" crossorigin=""><!--]--><!--]--><title>Blank, To-Scale</title>
 </head>
 
 <body>
@@ -30,15 +30,15 @@
 			
 			<script>
 				{
-					__sveltekit_asq8wo = {
+					__sveltekit_1k1fdao = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D_qZ8GaD.js"),
-						import("./_app/immutable/entry/app.BLpdHrnV.js")
+						import("./_app/immutable/entry/start.B-QCN5lY.js"),
+						import("./_app/immutable/entry/app.CI88p4ua.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
